--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -5,18 +5,25 @@
 
 .action-bar {
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 20rpx;
+  justify-content: center;
+  margin-top: 10rpx;
+  margin-bottom: 30rpx;
+  padding: 10rpx;
+  position: fixed;
+  bottom: 30rpx;
+  left: 0;
+  right: 0;
 }
 
 .add-btn, .random-btn {
   font-size: 28rpx;
-  padding: 10rpx 20rpx;
+  padding: 20rpx 30rpx;
   border-radius: 8rpx;
+  margin: 0 25rpx;
 }
 
 .dish-list {
-  height: calc(100vh - 100rpx);
+  height: calc(100vh - 120rpx);
 }
 
 .dish-card {
