--- a/miniprogram/pages/edit/edit.wxss
+++ b/miniprogram/pages/edit/edit.wxss
@@ -47,3 +47,86 @@ image {
 button[type=default] {
   flex: 1;
 }
+
+/* 标签相关样式 */
+.selected-tags {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 16rpx;
+}
+
+.tag-item {
+  display: flex;
+  align-items: center;
+  background-color: #f0f0f0;
+  border-radius: 30rpx;
+  padding: 8rpx 16rpx;
+  margin-right: 16rpx;
+  margin-bottom: 16rpx;
+  font-size: 24rpx;
+}
+
+.tag-delete {
+  margin-left: 8rpx;
+  font-size: 28rpx;
+  color: #999;
+}
+
+.tag-input-area {
+  display: flex;
+  margin-bottom: 16rpx;
+}
+
+.tag-input-area input {
+  flex: 1;
+  margin-right: 16rpx;
+}
+
+.tag-add-btn {
+  width: 120rpx;
+  height: 64rpx;
+  line-height: 64rpx;
+  font-size: 24rpx;
+  padding: 0;
+  margin: 0;
+  background-color: #07c160;
+  color: white;
+}
+
+.tag-suggestions {
+  margin-top: 24rpx;
+}
+
+.tag-suggestions > text {
+  font-size: 26rpx;
+  color: #666;
+  margin-bottom: 16rpx;
+  display: block;
+}
+
+.tag-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.tag-suggestion {
+  background-color: #f8f8f8;
+  border: 1px solid #eee;
+  border-radius: 30rpx;
+  padding: 8rpx 20rpx;
+  margin-right: 16rpx;
+  margin-bottom: 16rpx;
+  font-size: 24rpx;
+}
+
+.tag-suggestion.selected {
+  background-color: #e6f7ef;
+  border-color: #07c160;
+  color: #07c160;
+}
+
+.no-tags {
+  color: #999;
+  font-size: 24rpx;
+  padding: 10rpx 0;
+}
