:bug: wxml模版移除includes方法，移除console.log

--- a/miniprogram/pages/edit/edit.wxml
+++ b/miniprogram/pages/edit/edit.wxml
@@ -34,7 +34,7 @@
         <view class="tag-list">
           <block wx:if="{{allTags.length > 0}}">
             <view wx:for="{{allTags}}" wx:key="*this"
-              class="tag-suggestion {{currentTags.includes(item) ? 'selected' : ''}}" bindtap="selectTag"
+              class="tag-suggestion {{isTagExist(item) ? 'selected' : ''}}" bindtap="selectTag"
               data-tag="{{item}}">
               {{item}}
             </view>
